cluster/apps/alekssro-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alekssro-web
  namespace: alekssro-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: alekssro-web
  template:
    metadata:
      labels:
        app: alekssro-web
      annotations:
        configmap.reloader.stakater.com/reload: alekssro-web-index
    spec:
      containers:
        - name: alekssro-web
          image: nginx:1.31.5
          ports:
            - name: alekssro-web
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "16Mi"
            limits:
              memory: "32Mi"
          volumeMounts:
            - name: alekssro-web-index
              mountPath: /usr/share/nginx/html/

      volumes:
        - name: alekssro-web-index
          configMap:
            name: alekssro-web-index
