cluster/apps/alekssro-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alekssro-web-service
  namespace: alekssro-web
spec:
  selector:
    app: alekssro-web
  ports:
  - name: alekssro-web
    port: 80
