cluster/apps/alekssro-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alekssro-web
  namespace: alekssro-web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "${SECRET_DOMAIN}"
      secretName: alekssro-web-tls
  rules:
    - host: "${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alekssro-web-service
                port:
                  number: 80
